--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>skeleton</title>
-    <script type="text/javascript" src="./static/sso.js"></script>
+    <script type="text/javascript" src="/static/sso.js"></script>
   </head>
   <body>
     <div id="app"></div>
